<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/specialtyFragment">

    <fragment
        android:id="@+id/specialtyFragment"
        android:name="com.test.mytesttask.ui.specialty.SpecialtyFragment"
        android:label="@string/title_specialty"
        tools:layout="@layout/fragment_list" >
        <action
            android:id="@+id/action_specialtyFragment_to_employeeFragment"
            app:destination="@id/employeeFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/employeeFragment"
        android:name="com.test.mytesttask.ui.employee.EmployeeFragment"
        android:label="@string/title_employee"
        tools:layout="@layout/fragment_list" >
        <action
            android:id="@+id/action_employeeFragment_to_profileFragment"
            app:destination="@id/profileFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <argument
            android:name="specialtyId"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.test.mytesttask.ui.profile.ProfileFragment"
        android:label="@string/title_profile_employee"
        tools:layout="@layout/fragment_profile" >
        <argument
            android:name="employeeId"
            app:argType="integer" />
    </fragment>
</navigation>